<resources>
    <string name="app_name">NOAA</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favourite_title">Favourite</string>
    <string name="home_title">Home</string>
    <string name="alert_title">Alerts</string>
    <string name="setting_title">Setting</string>
    <string name="noaa_weather">NOAA Weather</string>
    <string name="_19_c">19°C</string>
    <string name="_30_c">30°C</string>
    <string name="_28">28°</string>
    <string name="new_delhi">New Delhi</string>
    <string name="_15_may_2020">15 MAY 2020</string>
    <string name="sunny_day">Sunny Day</string>
    <string name="am">AM</string>
    <string name="_7">7</string>
    <string name="sunday">Sun</string>
    <string name="_23_13_c">23/13°c</string>
    <string name="pressure">Pressure</string>
    <string name="_1021_hpa">1021 hpa</string>
    <string name="_77">77%</string>
    <string name="humidity">Humidity</string>
    <string name="_2_06_m_s">2.06 m/s</string>
    <string name="wind">Wind</string>
    <string name="_0">0 %</string>
    <string name="visibility">Visibility</string>
    <string name="_6000_m">6000 m</string>
    <string name="ultra_violet">Ultra Violet</string>
    <string name="_0_0">0.0</string>
    <string name="cloud">Cloud</string>
    <string name="_0percentage">0%</string>
    <string name="_3_58_am">03:58 AM</string>
    <string name="to">TO</string>
    <string name="add_alert">Add Alert</string>
    <string name="from">FROM</string>
    <string name="alert_noS">Alert</string>
    <string name="notification">Notification</string>
    <string name="save">SAVE</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="location">Location</string>
    <string name="meter_sec">Meter/Sec</string>
    <string name="language">Language</string>
    <string name="arabic">Arabic</string>
    <string name="notifications">Notifications</string>
    <string name="enable">Enable</string>
    <string name="english">English</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="mile_hour">Mile/Hour</string>
    <string name="disable">Disable</string>
    <string name="temperature">Temperature</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="ok">OK</string>
    <string name="_12_may">12 MAY</string>
    <string name="save_location">Save Location</string>
    <string name="k">K</string>
    <string name="c">C</string>
    <string name="f">F</string>
    <string name="hpa">hpa</string>
    <string name="m">m</string>
    <string name="today">TODAY</string>
    <string name="tomo">Tomorrow</string>
    <string name="percentage">%</string>
    <string name="notification_permission">Notification Permission is required</string>
    <string name="stop">STOP</string>
    <string name="overlay_permission_is_required_for_alert">overLay Permission Is Required for alert</string>
</resources>