<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".alert.view.AlertFragment">




    <TextView
        android:id="@+id/_tv_title_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/alert_title"
        android:textColor="@color/text_color"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_alertUser_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/overlay_permission_is_required_for_alert"
        android:textColor="@color/red"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/_tv_title_alert" />

    <Button
        android:id="@+id/btn_enable_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/enable"
        android:layout_marginStart="20dp"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/tv_alertUser_alert"
        app:layout_constraintBottom_toBottomOf="@id/tv_alertUser_alert"
        app:layout_constraintTop_toTopOf="@id/tv_alertUser_alert" />

    <TextView
        android:id="@+id/tv_alertUser_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/notification_permission"
        android:textColor="@color/red"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_alertUser_alert"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/btn_enable_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/enable"
        android:layout_marginStart="20dp"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/tv_alertUser_notification"
        app:layout_constraintTop_toTopOf="@id/tv_alertUser_notification"
        app:layout_constraintBottom_toBottomOf="@id/tv_alertUser_notification"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_alerts"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_alertUser_notification"
        tools:listitem="@layout/item_alert" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:backgroundTint="@color/text_color"
        android:contentDescription="@string/add_alert"
        android:src="@drawable/alert_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@color/second_color_yellow"
        app:tint="@color/second_color_yellow" />

</androidx.constraintlayout.widget.ConstraintLayout>