<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="30dp"
    app:cardUseCompatPadding="true"
    app:cardElevation="3dp"
    android:backgroundTint="@color/second_color_yellow"
    app:strokeWidth="0dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/tv_day_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/sunday"
            android:textColor="@color/text_color"
            android:textSize="18sp"/>

        <ImageView
            android:id="@+id/iv_icon_days"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:src="@drawable/sun" />

        <TextView
            android:id="@+id/tv_status_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/sunny_day"
            android:textColor="@color/text_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_degree_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.2"
            android:text="@string/_23_13_c"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            />
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>